Ensure brand text isn't overflowing on small screens

--- a/src/styles/header.less
+++ b/src/styles/header.less
@@ -5,12 +5,12 @@
   background-attachment: scroll;
   background-size: cover;
   color: white;
+  text-align: center;
 
   .top {
     position: absolute;
     top: 20px;
     width: 100%;
-    text-align: center;
 
     a {
       font-size: 30px;
@@ -29,10 +29,8 @@
   .middle {
     position: absolute;
     top: 50%;
-    left: 50%;
-    width: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    width: 100%;
+    transform: translateY(-50%);
     font-size: 40px;
 
     .weak {
